--- a/css/payroll_form.css
+++ b/css/payroll_form.css
@@ -176,6 +176,13 @@ label {
   color: red;
 }
 
+.date-error {
+  margin-left: 10px;
+  font-size: 12px;
+  font-style: italic;
+  color: red;
+}
+
 @media only screen and (max-width: 960px) {
   .cancelButton {
     margin-left: 0px;
