--- a/css/homePage.css
+++ b/css/homePage.css
@@ -71,3 +71,18 @@
   display: inline-block;
 }
 
+.add-button {
+  display: flex;
+  flex-direction: row;
+  font: normal normal normal 20px/29px Roboto;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  background: #82a70c 0% 0% no-repeat padding-box;
+  border: none;
+  border-radius: 4px;
+  padding: 2px 10px;
+  outline: none;
+  cursor: pointer;
+  text-decoration: none;
+}
